feat: filesystem virtual + Flyway migraciones
Filesystem virtual (ls/cd/mkdir/pwd/touch/rm/cat/tree):
- ShellState: navegacion por path con proyectos y carpetas
- VirtualFilesystem: carpetas persistidas en data/folders.dat
- 8 comandos fs: ls, cd, mkdir, pwd, touch, rm, cat, tree
- Project.java: campo folderPath para ubicar proyectos en carpetas
- Project-Create usa el path actual del shell
- clear muestra banner + dashboard al limpiar

Flyway - migraciones sin perdida de datos:
- FlywayConfig.java: ejecuta migraciones antes de JPA
- V1__create_schema.sql: esquema inicial completo
- V2__add_folder_path_to_projects.sql: nueva columna
- hbm2ddl.auto cambiado a validate (Flyway gestiona el esquema)

Limpieza:
- Eliminados repositorios JDBC (dead code)
- Eliminado UserJdbcRepositoryTest
- DiscordCommand: ProcessBuilder en vez de Runtime.exec deprecado